Working Submit
-Hides empty descriptions
-Fakes data using "fake" as username
-Fixed XML parsing bugs
-Better logging
-Added padding to ListView items