@@ -7,12 +7,22 @@ import android.os.Bundle;
 import android.util.Log;
 import android.widget.Toast;
 
+import org.apache.http.HttpEntity;
+import org.apache.http.HttpResponse;
+import org.apache.http.NameValuePair;
 import org.apache.http.client.CookieStore;
+import org.apache.http.client.entity.UrlEncodedFormEntity;
+import org.apache.http.client.methods.HttpPost;
+import org.apache.http.client.params.ClientPNames;
+import org.apache.http.client.params.CookiePolicy;
 import org.apache.http.cookie.Cookie;
 import org.apache.http.impl.client.BasicCookieStore;
+import org.apache.http.impl.client.DefaultHttpClient;
+import org.apache.http.message.BasicNameValuePair;
 import org.xmlpull.v1.XmlPullParserException;
 
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -22,6 +32,8 @@ import java.util.List;
  */
 public class SignupActivity extends Activity implements SignupFragment.OnFragmentInteractionListener
 {
+	private final String TAG = "Signup Activity";
+
 	private SignupFragment mSignupFragment;
 	private String AID;
 	private String BID;
@@ -35,7 +47,8 @@ public class SignupActivity extends Activity implements SignupFragment.OnFragmen
 
 		mSignupFragment = new SignupFragment();
 		// Check if fake information should be used
-		if(intent.getBooleanExtra("fake", false)) {
+		if (intent.getBooleanExtra("fake", false)) {
+			Log.d(TAG, "Loading fake info");
 			Bundle args = new Bundle();
 			args.putSerializable("list", getList());
 			mSignupFragment.setArguments(args);
@@ -55,7 +68,9 @@ public class SignupActivity extends Activity implements SignupFragment.OnFragmen
 		}
 
 		// Retrieve list for bid using cookies
-		new ActivityListRequest().execute("https://iodine.tjhsst.edu/api/eighth/list_activities/2829");
+		if (!intent.getBooleanExtra("fake", false)) {
+			new ActivityListRequest().execute("https://iodine.tjhsst.edu/api/eighth/list_activities/2829");
+		}
 	}
 
 	// Try signing up for an activity
@@ -69,8 +84,10 @@ public class SignupActivity extends Activity implements SignupFragment.OnFragmen
 	public void postSubmit(boolean result) {
 		if(result) {
 			Toast.makeText(getApplicationContext(), "Signed up!", Toast.LENGTH_SHORT).show();
+			Log.d(TAG, "Sign up success");
 		} else {
 			Toast.makeText(getApplicationContext(), "Something went wrong...", Toast.LENGTH_SHORT).show();
+			Log.w(TAG, "Sing up failure");
 		}
 	}
 
@@ -79,14 +96,14 @@ public class SignupActivity extends Activity implements SignupFragment.OnFragmen
 		try {
 			return new EighthActivityXmlParser().parse(getAssets().open("testActivityList.xml"));
 		} catch(Exception e) {
-			Log.e("hi", e.toString());
+			e.printStackTrace();
 		}
 		return null;
 	}
 
 	// AsyncTask to handle contacting the server
 	private class ActivityListRequest extends AsyncTask<String, Void, ArrayList<EighthActivityItem>> {
-		private static final String TAG = "CONNECTION";
+		private static final String TAG = "Activity List Connection";
 
 		@Override
 		protected ArrayList<EighthActivityItem> doInBackground(String... urls) {
@@ -98,7 +115,6 @@ public class SignupActivity extends Activity implements SignupFragment.OnFragmen
 				urlConnection = (HttpURLConnection) new URL(urls[0]).openConnection();
 				// Add cookies to header
 				for(Cookie cookie : cookies) {
-					System.out.println(cookie.getName() + "=" + cookie.getValue());
 					urlConnection.setRequestProperty("Cookie", cookie.getName() + "=" + cookie.getValue());
 				}
 				// Begin connection
@@ -123,32 +139,36 @@ public class SignupActivity extends Activity implements SignupFragment.OnFragmen
 		}
 	}
 
-	// AsyncTask to handle contacting the server
+	// Web request for activity signup using HttpClient
 	private class SignupRequest extends AsyncTask<String, Void, Boolean> {
-		private static final String TAG = "CONNECTION";
+		private static final String TAG = "Signup Connection";
 
 		@Override
 		protected Boolean doInBackground(String... urls) {
 			assert(urls.length == 1);
-			HttpURLConnection urlConnection;
 			List<Cookie> cookies = mCookieStore.getCookies();
-			boolean response;
+			DefaultHttpClient client = new DefaultHttpClient();
 			try {
-				urlConnection = (HttpURLConnection) new URL(urls[0]).openConnection();
+				// Setup client
+				client.getParams().setParameter(ClientPNames.COOKIE_POLICY, CookiePolicy.RFC_2109);
+				HttpPost post = new HttpPost(new URI(urls[0]));
 				// Add cookies
 				for(Cookie cookie : cookies) {
-					System.out.println(cookie.getName() + "=" + cookie.getValue());
-					urlConnection.setRequestProperty("Cookie", cookie.getName() + "=" + cookie.getValue());
+					post.setHeader("Cookie", cookie.getName() + "=" + cookie.getValue());
 				}
 				// Add parameters
-				urlConnection.addRequestProperty("Content-Type", "xml");
-				urlConnection.setRequestProperty("aid", AID);
-				urlConnection.setRequestProperty("bid", BID);
+				List<NameValuePair> data = new ArrayList<NameValuePair>(2);
+				System.out.println(AID + BID);
+				data.add(new BasicNameValuePair("aid", AID));
+				data.add(new BasicNameValuePair("bid", BID));
+				post.setEntity(new UrlEncodedFormEntity(data));
 
-				urlConnection.connect();
-				response = new EighthActivityXmlParser().parseSuccess(urlConnection.getInputStream());
-				urlConnection.disconnect();
-				return response;
+				// Send request
+				HttpResponse response = client.execute(post);
+
+				// Parse response
+				HttpEntity entity = response.getEntity();
+				return new EighthActivityXmlParser().parseSuccess(entity.getContent());
 			} catch (XmlPullParserException e) {
 				Log.e(TAG, "XML error.", e);
 			} catch (Exception e) {
